Port baseline to Forge 1.20.1